# dominion-transformer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: dominion-transformer-design-doc.md  observation_tensor_design.md  observation_tensor_design_v2.md
game/: BUILD.md  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
game/include/: actions.hpp  board_state.hpp  cards.hpp  context.hpp  dominion.hpp  effects.hpp  engine.hpp
game/src/: actions.cpp  board_state.cpp  cards.cpp  cards_test.cpp  context.cpp  dominion.cpp  dominion_console_play.cpp  dominion_test.cpp  effects.cpp  engine.cpp
game/src/cards/: cellar.cpp  cellar_test.cpp  chapel.cpp  chapel_test.cpp  merchant_test.cpp  militia.cpp  militia_test.cpp  mine.cpp  mine_test.cpp  moneylender.cpp  moneylender_test.cpp  remodel.cpp  remodel_test.cpp  silver.cpp  throne_room.cpp  throne_room_test.cpp  witch.cpp  witch_test.cpp  workshop.cpp  workshop_test.cpp
open_spiel/tests/: console_play_test.cc  console_play_test.h
